<?xml version="1.0"?>
<package format="2">
    <name>gazebo_set_joint_positions_plugin</name>
    <version>1.0.0</version>
    <description>Set gazebo robot joint positions</description>
    <maintainer email="Jason.Cochrane@boeing.com">Boeing</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <test_depend>rostest</test_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
