<?xml version="1.0"?>
<package format="3">
    <name>gazebo_set_joint_positions_plugin</name>
    <version>1.0.0</version>
    <description>Set gazebo robot joint positions</description>
    <maintainer email="Jason.Cochrane@boeing.com">Boeing</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!--depend>boost</depend-->
    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    </export>

</package>
